# AIMA

./: BUILD_FIX_DOCUMENTATION.md  CHANGELOG.md  DOCKER_STARTUP_OPTIMIERUNG.md  INFRASTRUKTUR_PLAN_1.0.md  Makefile  README.md  build.ps1  build.sh  docker-compose.yml
Dokumentation/: TECHNISCHE_BLAUPAUSE.md  UEBERSICHT.md
Dokumentation/GPU-Administration/: GPU_INSTANZ_ADMINISTRATION.md
Dokumentation/Konzepte/: DOCKER_ONLY_BETRIEBSKONZEPT.md  DOCKER_VS_KUBERNETES_AUFWAND.md  KOSTENGUENSTIGE_KUBERNETES_ANBIETER.md  KOSTENVERGLEICH_IONOS_DO.md
Dokumentation/Medienanalyse/: AUDIOANALYSE.md  BILDANALYSE.md  ML_MODELLE_BRAINSTORMING.md  VIDEOANALYSE.md
Dokumentation/Medientransfer/: MEDIENTRANSFER.md
Dokumentation/System/: ABBRUCHVERHALTEN.md  ANWENDUNGSSZENARIO_BENUTZER.md  API_MAPPING.md  BENUTZEROBERFLAECHE_UND_INTERAKTION.md  BETRIEBSKOSTEN_AWS.md  CHECKPOINT_MECHANISMUS.md  CIRCUIT_BREAKER_KONZEPT.md  DATENBANKARCHITEKTUR.md  DATENFUSION_ALGORITHMEN.md  DATENFUSION_IMPLEMENTIERUNG.md  DATENSPEICHERUNG_UND_FUSION.md  EVENT_ORDERING_KONZEPT.md  FEHLENDE_TEILBEREICHE.md  GPU_PROVIDER_STRATEGIE.md  KOSTENOPTIMIERUNG_IDLE_BETRIEB.md  KOSTENSCHAETZUNG.md  KOSTENSCHAETZUNG_PROZESS.md  LOKALE_GPU_INTEGRATION.md  MEDIENWORKFLOW.md  METRIKEN_ERFASSUNG.md  MODULARISIERUNG_ENTWURF.md  PIPELINE_KONZEPT.md  PRAEDIKTIVE_SKALIERUNG.md  SERVICE_DISCOVERY.md  SKALIERBARKEIT_UND_LASTVERTEILUNG.md  SYSTEMFAEHIGKEITEN.md  TRANSAKTIONSKONZEPT_SAGA.md  UI_KONZEPT.md  UMSETZUNGSKONZEPT.md  UNKLARHEITEN.md  VERSIONSVERWALTUNG.md  VPS_IDLE_KONZEPT.md  VPS_VS_CLOUD.md
Dokumentation/System/Archiv/: FEHLENDE_TEILBEREICHE.md  UNKLARHEITEN.md
backups/postgres/: aima_backup_20250721_163350.sql.custom  aima_backup_20250722_151232.sql.custom
database/backup-scripts/: postgres-backup.sh
database/config/: mongod.conf  postgresql.conf  redis.conf
database/init/: 01_init_schema.sql  02_seed_data.sql
mongo-secrets/: mongo-keyfile
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: dashboard.yml
services/configuration-management/: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  start_service.py  test_service.py
services/configuration-management/alembic/: env.py
services/configuration-management/app/: __init__.py  main.py
services/configuration-management/app/api/: __init__.py  dependencies.py
services/configuration-management/app/api/v1/: __init__.py  config.py  health.py
services/configuration-management/app/core/: __init__.py  config.py  database.py  redis.py
services/configuration-management/app/models/: __init__.py  database.py  schemas.py
services/configuration-management/app/services/: __init__.py  config_service.py
services/configuration-management/init-scripts/: 01-init-database.sql  02-post-init.sql
services/gpu-orchestration/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  init-db.sql  pyproject.toml  requirements.txt  setup.py  start_service.py
services/gpu-orchestration/app/: __init__.py  main.py
services/gpu-orchestration/app/api/: __init__.py  instances.py  jobs.py  monitoring.py  providers.py  templates.py
services/gpu-orchestration/app/core/: __init__.py  config.py  database.py
services/gpu-orchestration/app/models/: __init__.py  gpu_models.py
services/gpu-orchestration/app/providers/: __init__.py  base_provider.py  runpod_provider.py
services/gpu-orchestration/app/services/: __init__.py  gpu_orchestrator.py  job_manager.py
services/gpu-orchestration/monitoring/: prometheus.yml
services/gpu-orchestration/monitoring/grafana/dashboards/: dashboards.yml  gpu-orchestration.json
services/gpu-orchestration/monitoring/grafana/datasources/: prometheus.yml
services/media-lifecycle-management/: Dockerfile  requirements.txt
services/media-lifecycle-management/app/: main.py
services/media-lifecycle-management/app/api/: dependencies.py
services/media-lifecycle-management/app/api/routes/: media.py
services/media-lifecycle-management/app/core/: config.py  database.py  redis_client.py  storage.py
services/media-lifecycle-management/app/middleware/: __init__.py  error_handling.py  logging.py  metrics.py  rate_limiting.py
services/media-lifecycle-management/app/models/: __init__.py  common.py  media.py  webhooks.py
services/media-lifecycle-management/app/services/: analytics_service.py  audit_service.py  backup_service.py  caching_service.py  config_service.py  lifecycle_manager.py  media_processor.py  metadata_extractor.py  monitoring_service.py  notification_service.py  rate_limiting.py  security_service.py  task_queue.py  webhook_service.py
services/user-management/: .dockerignore  .env  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  requirements.txt  start_service.py
services/user-management/alembic/: env.py
services/user-management/alembic/versions/: .gitkeep  2f93586f8941_initial_database_schema.py
services/user-management/app/: __init__.py  main.py
services/user-management/app/api/: __init__.py  dependencies.py  deps.py
services/user-management/app/api/v1/: __init__.py  admin.py  auth.py  health.py  users.py
services/user-management/app/core/: __init__.py  config.py  database.py  exceptions.py  messaging.py  middleware.py  permissions.py  redis.py  security.py
services/user-management/app/models/: __init__.py  schemas.py
services/user-management/app/services/: __init__.py  audit_service.py  user_service.py
